[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/ui/bar/circle.png" type="Texture" id=1]
[ext_resource path="res://assets/ui/fonts/montserrat_eb_14.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/ui/loading/action_delay.gd" type="Script" id=3]
[ext_resource path="res://assets/ui/bar/circle_fill.png" type="Texture" id=4]

[node name="action_delay" type="MarginContainer"]
margin_right = 140.0
margin_bottom = 141.0
rect_min_size = Vector2( 128, 128 )
mouse_filter = 2
script = ExtResource( 3 )

[node name="action_delay_progress" type="TextureProgress" parent="."]
margin_right = 140.0
margin_bottom = 141.0
mouse_filter = 2
max_value = 5.0
step = 0.1
value = 5.0
texture_under = ExtResource( 4 )
texture_progress = ExtResource( 1 )
fill_mode = 5
tint_under = Color( 0.0784314, 0.0784314, 0.0784314, 0.145098 )
nine_patch_stretch = true
stretch_margin_left = 32
stretch_margin_top = 32
stretch_margin_right = 32
stretch_margin_bottom = 32

[node name="action_delay_label" type="Label" parent="."]
margin_left = 65.0
margin_top = 62.0
margin_right = 74.0
margin_bottom = 78.0
size_flags_horizontal = 4
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/line_spacing = 1
custom_constants/shadow_offset_y = 1
custom_constants/shadow_as_outline = 1
custom_fonts/font = ExtResource( 2 )
text = "..."
align = 1
valign = 1

[node name="action_delay_timer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="action_delay_timer" to="." method="_on_action_delay_timer_timeout"]
